recallable/tests/ui/derive_fail_recallable_name_value_parameter.stderr
error: unrecognized `recallable` parameter
 --> tests/ui/derive_fail_recallable_name_value_parameter.rs:5:5
  |
5 |     #[recallable = "skip"]
  |     ^^^^^^^^^^^^^^^^^^^^^^
