recallable/tests/ui/derive_fail_recallable_name_value_parameter.rs
use recallable::Recallable;

#[derive(Recallable)]
struct InvalidRecallableNameValueParameter<T> {
    #[recallable = "skip"]
    value: T,
}

fn main() {}
